--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html{
-    font-size: 62.5%;
-}
-body{
-    font-family: 'Montserrat', sans-serif;
-}
 
 #banner{
     background:linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)), url(./img/hero.jpg);
@@ -16,6 +5,9 @@ body{
     background-position: center;
     height: 100vh;
     margin-bottom: 8rem;
+}
+header{
+  height: 50px;
 }
 .banner-text{
     text-align: center;
@@ -80,6 +72,15 @@ nav ul li a:hover{
   border-bottom: .5px solid ;
   color: #ca4273;
 }
+.sidenav ion-icon{
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: none;
+  top: 2.4rem;
+  right: 2.4rem;
+}
+
 .section-container {
     width: 80%;
     margin: 0 auto;
@@ -87,15 +88,18 @@ nav ul li a:hover{
 #products{
     display: grid;
     gap: 2.5rem;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(220px,1fr));
     margin-bottom: 8rem;
 }
 .product{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
     position: relative;
-    gap: 2.4rem;
+    
     height: 48rem;
+    gap: 2.4rem;
     padding: 2rem 3rem;
     box-shadow: rgba(115, 115, 115, 0.2) 0px 2px 0px 0px, rgba(115, 115, 115, 0.3) 0px 0px 2px 0px;
 }
@@ -103,7 +107,6 @@ nav ul li a:hover{
     line-height: 2.5rem;
 }
 button{
-    position: absolute;
     padding: 1rem 1rem;
     color: #fff;
     background-color: #ca4273;
@@ -129,23 +132,30 @@ button{
  display:flex;
  flex-direction: column;
  justify-content:center;
+ align-items: flex-start;
  gap: 3.2rem;
  padding: 2.4rem;
  font-size: 1.4rem;
 }
 .cta-image img{
-  width: 45rem;
-  height: 45rem;
+  width: 100%;
+  height: 100%;
+}
+.cta-image{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .cta-btn{
   font-size: 1.8rem;
-  width: 15%;
   padding: 1rem;
   border: 1px solid transparent;
   border-radius: 0.5rem;
   background-color: #ca4273 ;
   color: #fff;
   text-decoration: none;
+  
+  white-space: nowrap;
 }
 .cta-btn:hover{
   background-color: #fff;
@@ -182,9 +192,7 @@ button{
     color:#ca4273;
     padding-bottom: 0.2rem;
 }
-.footer-links.inline li{
-  display:inline-block
-}
+
 .site-footer .social-icons a{
   width:4.2rem;
   height:4.2rem;
@@ -199,12 +207,24 @@ button{
 }
 .first-footer{
     display: flex;
-    justify-content: space-around;
-    gap: 6.4rem;
+    width: 90%;
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 3.2rem;
     margin-bottom: 1.2rem;
 }
 .item-footer{
-    max-width: 20%;
+    flex: 30%;
+}
+
+.site-footer .container{
+  display: flex;
+  justify-content: center;
+}
+
+.second-footer{
+  padding: 1.6rem;
 }
 .site-footer .copyright-text,
 .site-footer .social-icons{
@@ -244,5 +264,4 @@ button{
 .social-icons a.linkedin:hover{
   background-color:#007bb6
 }
-
 
